Fix for img responsiveness on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -240,7 +240,6 @@ p {
 }
 
 .projects-section .details-img {
-	text-align: center;
 	margin-top: 1em;
 	margin-bottom: 1em;
 }
